--- a/src/ConfigSetup.Web/ConfigSetup.Web.csproj
+++ b/src/ConfigSetup.Web/ConfigSetup.Web.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Version>1.0.0</Version>
+    <AssemblyName>ConfigSetup.Web-v$(Version)</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
