--- a/src/ConfigSetup.Web/ConfigSetup.Web.csproj
+++ b/src/ConfigSetup.Web/ConfigSetup.Web.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="../ConfigSetup.Domain/ConfigSetup.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
