--- a/src/ConfigSetup.Web/appsettings.json
+++ b/src/ConfigSetup.Web/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceHost": {
+    "EnableWindowsServiceIntegration": true,
+    "EnableSystemdIntegration": true,
+    "EnableHttpsRedirection": true
+  }
 }
