Add browser launcher and include static assets in single-file publish

--- a/src/ConfigSetup.Web/appsettings.json
+++ b/src/ConfigSetup.Web/appsettings.json
@@ -9,6 +9,7 @@
   "ServiceHost": {
     "EnableWindowsServiceIntegration": true,
     "EnableSystemdIntegration": true,
-    "EnableHttpsRedirection": true
+    "EnableHttpsRedirection": true,
+    "AutoLaunchBrowser": true
   }
 }
