--- a/src/ConfigSetup.Web/ConfigSetup.Web.csproj
+++ b/src/ConfigSetup.Web/ConfigSetup.Web.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Version>1.0.0</Version>
     <AssemblyName>ConfigSetup.Web-v$(Version)</AssemblyName>
+    <IncludeAllContentForSelfExtract Condition="'$(PublishSingleFile)' == 'true'">true</IncludeAllContentForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
