Add global json to pin dotnet 8

--- a/src/ConfigSetup.Web/appsettings.Development.json
+++ b/src/ConfigSetup.Web/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Instrument": {
+    "DefaultResourceAddress": "TCPIP0::127.0.0.1::inst0::INSTR",
+    "CommandTimeoutMilliseconds": 5000
   }
 }
