--- a/src/ConfigSetup.Web/appsettings.json
+++ b/src/ConfigSetup.Web/appsettings.json
@@ -11,5 +11,9 @@
     "EnableSystemdIntegration": true,
     "EnableHttpsRedirection": true,
     "AutoLaunchBrowser": true
+  },
+  "Instrument": {
+    "DefaultResourceAddress": "TCPIP0::127.0.0.1::inst0::INSTR",
+    "CommandTimeoutMilliseconds": 5000
   }
 }
